@@ -4,6 +4,8 @@ Changes from 4.3.22 -> 4.3.23 (11 Nov 2015)
 * rev 7729
 
 * Fix broken 'TRACK' and 'OPTIONAL' identifiers in analysis.cfg
+* Prevent logfetch from segfaulting if a file we're tracking line matching
+  deltacounts for wasn't found
 
 
 Changes from 4.3.21 -> 4.3.22 (6 Nov 2015)
